syntax = "proto3";

package proto;

option go_package = "github.com/caldog20/overlay/proto/gen;controllerv1";
import "controller/v1/peer.proto";

service ControllerService {
  rpc LoginPeer(LoginRequest) returns (LoginResponse) {}
  rpc RegisterPeer(RegisterRequest) returns (RegisterResponse) {}
  rpc SetPeerEndpoint(Endpoint) returns (Empty) {}
  rpc Update(UpdateRequest) returns (stream UpdateResponse) {}
  rpc Punch(PunchRequest) returns (Empty) {}
}

message Empty {}

message LoginRequest {
  string public_key = 1;
}

message LoginResponse {
  PeerConfig config = 1;
}

message RegisterRequest {
  string public_key = 1;
  string register_key = 2;
}

message RegisterResponse {}

message Endpoint {
  uint32 id = 1;
  string endpoint = 2;
}

message EndpointDiscovery {
  uint32 id = 1;
}

message EndpointDiscoveryResponse {
  string endpoint = 1;
}

